# openclaw-session-keeper

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  SECURITY.md  compatibility_check.py  config.example.json  cost_estimator.py  emergency_recovery.py  openclaw.plugin.json  package-lock.json  package.json  pyproject.toml  session_rollover.py
.github/workflows/: ci.yml  secret-scan.yml
config/: com.openclaw.session-keeper.plist.example  config.schema.json
docs/: COST_MODEL.md  COST_MODEL.zh-CN.md  OAUTH_SAFE_COMPACTION.md  OAUTH_SAFE_COMPACTION.zh-CN.md
scripts/: install_git_hooks.sh  preflight.sh  secret_scan.py
src/: deterministic-compaction.js  index.js
tests/: deterministic-compaction.test.mjs  test_compatibility_check.py  test_cost_estimator.py  test_emergency_recovery.py  test_session_rollover.py
